[project]
name = "hebcal-api"
version = "0.2.0"
description = "Async client for Hebcal API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "sudo-py-dev", email = "sudopydev@gmail.com" }
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.300",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hebcal_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F",   # pyflakes + pycodestyle
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # simplify
    "TCH",      # type-checking imports
    "ANN",      # annotations (enforce type hints)
    "RUF",      # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["ANN", "S", "RUF001"]  # relax annotations + security + ambiguous chars in tests

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = ["*/test/*"]

[project.urls]
Homepage = "https://github.com/sudo-py-dev/hebcal-api"
Issues = "https://github.com/sudo-py-dev/hebcal-api/issues"
